Linked all pages
added updated a ref link to all pages

--- a/fcc.html
+++ b/fcc.html
@@ -23,7 +23,7 @@
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="Images/favicon.png" />
     <!--Site Name-->
-    <title>Botagoz Berdikulova's final portfolio Solved</title>
+    <title>Ayla's FFC page</title>
 </header>
 <!--Content-->
 <body>
