--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <span></span>
             <!--Links Inside of Drop Down-->
             <ul id="menu">
-                <a href="https://aylaabil.github.io/UX_UI_HW_19">
+                <a href="index.html">
                     <li>Home</li>
                 </a>
-                <a href="https://aylaabil.github.io/UX_UI_HW_19/caseStudies.html">
+                <a href="caseStudies.html">
                     <li>Case Studies</li>
                 </a>
                 <a href="images/Resume.pdf">
