--- a/caseStudies.html
+++ b/caseStudies.html
@@ -23,7 +23,7 @@
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="Images/favicon.png" />
     <!--Site Name-->
-    <title>Botagoz Berdikulova's final portfolio Solved</title>
+    <title>Ayla's Case Studies</title>
 </header>
 <!--Content-->
 <body>
@@ -74,7 +74,7 @@
                 <h2>Government Site Redesign</h2>
                 <p>We have decided to simplify website's skeleton which will allow users locate any information faster,
                     and make UI of website more attractive.</p>
-                  <a href="https://aylaabil.github.io/UX_UI_HW_19/fcc.html" <button class="golden-btn">View
+                  <a href="fcc.html" <button class="golden-btn">View
                         Project</button> </a>
             </div>
         </div>
@@ -86,7 +86,7 @@
                 <h2>PAWS Non-Profit Site Redesign</h2>
                 <p>We believe there is an opportunity to improve our website (for both desktop and mobile view) so that
                     patrons have a more successful experience leading to increased donations.</p>
-                    <a href="https://aylaabil.github.io/UX_UI_HW_19/paws.html" <button class="golden-btn">View
+                    <a href="paws.html" <button class="golden-btn">View
                         Project</button> </a>
             </div>
         </div>
