--- a/paws.html
+++ b/paws.html
@@ -24,17 +24,17 @@
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="Images/favicon.png" />
     <!--Site Name-->
-    <title>Botagoz Berdikulova's final portfolio Solved</title>
+    <title>Ayla's PAWS page</title>
 </header>
 <!--Content-->
 <body>
     <!--Navigation-->
     <nav>
         <div class="nav-link">
-            <a href="https://aylaabil.github.io/UX_UI_HW_19">Home</a>
+            <a href="index.html">Home</a>
         </div>
         <div class="nav-link">
-            <a href="https://aylaabil.github.io/UX_UI_HW_19/caseStudies.html">Case Studies</a>
+            <a href="caseStudies.html">Case Studies</a>
         </div>
         <div class="nav-link">
             <a href="images/Resume.pdf">Resume</a>
